--- a/index.html
+++ b/index.html
@@ -111,19 +111,48 @@
                 <td>⭐⭐⭐⭐</td>
               </tr>
               <tr>
-                <td>MongoDB</td>
-                <td>⭐⭐⭐⭐⭐</td>
-              </tr>
-              <tr>
-                <td>MySQL</td>
+                <td>Database: MongoDB, MySQL</td>
                 <td>⭐⭐⭐⭐</td>
               </tr>
               <tr>
                 <td>JSON</td>
-                <td>⭐⭐⭐⭐⭐</td>
+                <td>⭐⭐⭐⭐</td>
+              </tr>
+              <tr>
+                <td>APIs</td>
+                <td>⭐⭐⭐⭐</td>
+              </tr>
             </tbody>
           </table>
         </td>
+
+        <td>
+          <!--Table 3-->
+          <table cellspacing="10">
+            <tbody>
+              <tr>
+                <td>ReactJS</td>
+                <td>⭐⭐⭐</td>
+              </tr>
+              <tr>
+                <td>Node.js, Express</td>
+                <td>⭐⭐⭐</td>
+              </tr>
+              <tr>
+                <td>Javascript ES6</td>
+                <td>⭐⭐⭐</td>
+              </tr>
+              <tr>
+                <td>HTML, CSS, Bootstrap</td>
+                <td>⭐⭐⭐</td>
+              </tr>
+
+
+            </tbody>
+          </table>
+
+        </td>
+
       </tr>
       <tr>
 
@@ -131,6 +160,14 @@
     </tbody>
   </table>
 
+  <h3>Some sample projects</h3>
+  <ul>
+    <li>Notes Web App with ReactJS <a href="#">Check it here!</a> </li>
+    <li>Blog website with Express, EJS & dynamic routes <a href="www">Check it here!</a> </li>
+    <li>Newsletter for surfer news <a href="www">Check it here!</a>  </li>
+    <li>Todo list with Node.js & MongoDB <a href="#">Check it here!</a> </li>
+
+  </ul>
 
 
   <a href="hobbies.html">
